--- a/Scss/main.scss
+++ b/Scss/main.scss
@@ -1,33 +1,5 @@
-.container{
-    width: 100%;
-    height: 1000px;
-background-image: url(../Css/Images/aaronburdensnowflake.jpg);
-background-size: cover;
-    text-align: center;
-    background-color: aqua;
-    .box{
-        display: inline-block;
-    }
-}
+@import 'partials/base';
+@import 'partials/colors';
+@import 'Vendor/animate';
+@import 'Vendor/normalize';
 
-.first{
-    width: 200px;
-    height:500px;
-    background-color: white;
-    text-align: center;
-    float: left;
-    margin-left: 10px;
-}
-.second{
-    width: 200px;
-    height: 500px;
-    background-color: white;
-    text-align: center;
-    display: inline-block;
-}
-.cookies{
-    background-image: url(../Css/Images/cookies.png);
-}
-h1{
-    font-size: 2.5em;
-}
