--- a/Scss/Partials/_base.scss
+++ b/Scss/Partials/_base.scss
@@ -10,7 +10,30 @@ background-size: cover;
     }
 }
 h1{
+    font-family: 'Merriweather', serif;
     font-size: 2.5em;
+    transition:all 2s ease-in 1s;
+    -webkit-transition:all 2s ease-in 1s;
+    -moz-transition:all 2s ease-in 1s;
+    -o-transition:all 2s ease-in 1s;
+    
+}
+header{
+    font-family: 'Merriweather', serif;
+    
+
+}
+.btn btn-primary{
+    text-align: center;
+    transition:all 2s ease-in 1s;
+    -webkit-transition:all 2s ease-in 1s;
+    -moz-transition:all 2s ease-in 1s;
+    -o-transition:all 2s ease-in 1s;
+    :hover{
+        animation-name: rubberband;
+        animation-duration: 1s;
+    transition-timing-function: ease-in;
+    }
 }
 .first{
     width: 400px;
@@ -19,14 +42,173 @@ h1{
     text-align: center;
     float: left;
     margin-left: 10px;
+    font-family: 'Merriweather', serif;
+    transition:all 2s ease-in 1s;
+    -webkit-transition:all 2s ease-in 1s;
+    -moz-transition:all 2s ease-in 1s;
+    -o-transition:all 2s ease-in 1s;
+    :hover{
+        animation-duration: 2s;
+    animation-name: rubberBand;}
 }
 .second{
     width: 400px;
-    height: 500px;
+    height:500px;
     background-color: white;
     text-align: center;
     display: inline-block;
+    font-family: 'Merriweather', serif;
+    transition:all 2s ease-in 1s;
+    -webkit-transition:all 2s ease-in 1s;
+    -moz-transition:all 2s ease-in 1s;
+    -o-transition:all 2s ease-in 1s;
+    :hover{
+        animation-duration: 2s;
+    animation-name: rubberBand;
 }
+    
+}
+.button{
+    width:100px;
+    height:50px;
+    background-color: rgb(150, 150, 245);
+    color: white;
+    transition:all 2s ease-in 1s;
+    -webkit-transition:all 2s ease-in 1s;
+    -moz-transition:all 2s ease-in 1s;
+    -o-transition:all 2s ease-in 1s;
+    :hover{
+        animation-duration: 2s;
+        animation-name: rubberBand;
+    }
+}
+
 .cookies{
-    background-image: url(../Css/Images/cookies.png);
+    animation-name: bounceIn;
+    animation-duration: 1s;
+    transition-timing-function: ease-in;
+}
+.hero-title{
+    text-align: center;
+    .button{
+        width: 20px;
+        height:40px;
+        background-color:lightblue;
+:hover{
+    animation-duration: 2s;
+        animation-name: rubberband;
+}
+    }
+    @keyframes rubberBand {
+        from {
+          -webkit-transform: scale3d(1, 1, 1);
+          transform: scale3d(1, 1, 1);
+        }
+      
+        30% {
+          -webkit-transform: scale3d(1.25, 0.75, 1);
+          transform: scale3d(1.25, 0.75, 1);
+        }
+      
+        40% {
+          -webkit-transform: scale3d(0.75, 1.25, 1);
+          transform: scale3d(0.75, 1.25, 1);
+        }
+      
+        50% {
+          -webkit-transform: scale3d(1.15, 0.85, 1);
+          transform: scale3d(1.15, 0.85, 1);
+        }
+      
+        65% {
+          -webkit-transform: scale3d(0.95, 1.05, 1);
+          transform: scale3d(0.95, 1.05, 1);
+        }
+      
+        75% {
+          -webkit-transform: scale3d(1.05, 0.95, 1);
+          transform: scale3d(1.05, 0.95, 1);
+        }
+      
+        to {
+          -webkit-transform: scale3d(1, 1, 1);
+          transform: scale3d(1, 1, 1);
+        }
+      }
+      @keyframes bounceIn {
+        from,
+        20%,
+        40%,
+        60%,
+        80%,
+        to {
+          -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+          animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+        }
+      
+        0% {
+          opacity: 0;
+          -webkit-transform: scale3d(0.3, 0.3, 0.3);
+          transform: scale3d(0.3, 0.3, 0.3);
+        }
+      
+        20% {
+          -webkit-transform: scale3d(1.1, 1.1, 1.1);
+          transform: scale3d(1.1, 1.1, 1.1);
+        }
+      
+        40% {
+          -webkit-transform: scale3d(0.9, 0.9, 0.9);
+          transform: scale3d(0.9, 0.9, 0.9);
+        }
+      
+        60% {
+          opacity: 1;
+          -webkit-transform: scale3d(1.03, 1.03, 1.03);
+          transform: scale3d(1.03, 1.03, 1.03);
+        }
+      
+        80% {
+          -webkit-transform: scale3d(0.97, 0.97, 0.97);
+          transform: scale3d(0.97, 0.97, 0.97);
+        }
+      
+        to {
+          opacity: 1;
+          -webkit-transform: scale3d(1, 1, 1);
+          transform: scale3d(1, 1, 1);
+        }
+      }
+      
+      .bounceIn {
+        -webkit-animation-duration: 0.75s;
+        animation-duration: 0.75s;
+        -webkit-animation-name: bounceIn;
+        animation-name: bounceIn;
+      }
+      @-webkit-keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+      
+        to {
+          opacity: 1;
+        }
+      }
+      
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+      
+        to {
+          opacity: 1;
+        }
+      }
+      
+      .fadeIn {
+        -webkit-animation-name: fadeIn;
+        animation-name: fadeIn;
+      }
+      
 }
